version 20090612_1
Added the ability to control read-only aliases directly from the
"advanced options" for a page.  In support of that new functionality
I added a slew of unit tests and one new Selenium test.

version 20090108_2
Added a bunch of Selenium assertions to the pre-existing
tst_encrypt_decrypt_page_content test.  It now checks for pressing enter
or clicking on the "encrypt" or "decrypt" buttons.  It also checks for the
confirmation dialog which pops up if you try to save a page that has the
encryption options showing but the text hasn't been encrypted. (Since the
user might have made a mistake, and might not want the contents going to the
server unencrypted)

version 20090108_1
Worked on the encryption stuff so that:
   * It automatically focuses on the blowfish key input on page load
   * It will encrypt or decrypt when you hit "Enter" while within the input.
   * The text you input is not visible while you type it.
I did all this stuff because I use an encrypted page, and I wanted to be able
to decrypt it more quickly without having to hit all sorts of buttons and
manually focus on the field.

version 20080727_1
Added the ability to hide pages from the 'find lost page'
results.  Added selenium tests for all sorts of variations on the 'find lost
page' results.  Hadn't realized that they weren't tested, except by hand.

version 20080703_1
Added the ability to use colons to allow for some of the simpler page
actions.  For example, http://www.pageoftext.com/test_page:edit will
take you to an editing page now.  If you are not using mod_rewrite, then
that URL would look like this http://www.yourwikisite.com/?test_page:edit
with the question mark.  If you are using mod_rewrite then you should note
the addition of the \\: in the Apache configuration RewriteRule.

version 20080630_1
Added the page name to the page titles.  Easier to see which page is
which when you have multiple tabs open in your browser, or when reviewing
your browser history.
