@@ -1,3 +1,8 @@
+version 20090814_1
+Fixed an issue which could have allowed people to accidentally change
+the contents of read-only aliases page when creating new pages that
+happened to link to them.
+
 version 20090612_1
 Added the ability to control read-only aliases directly from the
 "advanced options" for a page.  In support of that new functionality
